--- a/pasteleria/seccion.html
+++ b/pasteleria/seccion.html
@@ -72,7 +72,7 @@
         <!-- Feature -->
         <div>
             <h2 class="text-4xl font-extrabold tracking-tight text-gray-900">Pastel de vainilla</h2>
-            <div class="mt-4 prose prose-user text-lg leading-relaxed text-gray-500 sm:text-xl">""Pureza en cada bocado: Deléitate con la suavidad celestial de nuestro pastel de vainilla, una delicia que te enamorará."</div>
+            <div class="mt-4 prose prose-user text-lg leading-relaxed text-gray-500 sm:text-xl">"Pureza en cada bocado: Deléitate con la suavidad celestial de nuestro pastel de vainilla, una delicia que te enamorará." El pastel de vainilla es un postre clásico que cautiva con su esponjosa textura y su sabor dulce y reconfortante. Perfecto para cualquier ocasión.</div>
             <button class="bg-red-500 hover:bg-blue-500 text-white font-semibold py-2 px-4 rounded-full hover:rounded-lg transition duration-300 ease-in-out">
                 Agregar al Carrito
             </button>
@@ -90,7 +90,7 @@
         </div>
     </div>
 </div>
-    <!-- Aquí puedes agregar la sección de catálogo de pasteles con el diseño que desees -->
+
 
 </body>
 </html>
